Log removed and spacing fixed.

--- a/web-app/style/app.scss
+++ b/web-app/style/app.scss
@@ -22,6 +22,10 @@ body {
   font-weight: 400;
 }
 
+.form-floating{
+  margin-bottom: 8px;
+}
+
 .form-signin .form-floating:focus-within {
   z-index: 2;
 }
